[tool.poetry]
name = "site_nextjs_dockr"
version = "0.1.0"
description = ""
authors = ["BrunoRagner <brunooragnner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytube = "^12.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
